test/zinc_source/compile_errors/iterations/01_empty_array_iteration_no_inference.zn
// expected-error: cannot infer type

fn main() {
    values = []
    for value in values {
        print("{value}")
    }
}
